blue download button jumping issue fixed

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -179,6 +179,7 @@ ul, li
     margin-right: auto
     line-height: 130%
     color: $medium_grey
+    font-size: 16px
 
 .hero--static__copy-container
     +ontop
