--- a/src/sass/pages/perspectives.sass
+++ b/src/sass/pages/perspectives.sass
@@ -44,15 +44,15 @@ form#search_bar
     width: 88%
     margin: 0 auto
 
-.pwp-breakdown__header
+//.pwp-breakdown__header
     //margin: 0
 
-#summary_header-h2
-    font-size: 1.5em
-    font-family: "Oswald light"
-    em
-        font-size: 2em
-        line-height: 1em
+//#summary_header-h2
+//    font-size: 1.5em
+//    font-family: "Oswald light"
+//    em
+//        font-size: 2em
+//        line-height: 1em
 
 .pwp-breakdown__header.underline.category
     +title-font-bold
@@ -276,10 +276,10 @@ img.btn-discover_img
 .pillar_content_h4
     width: 20%
 #download_policy, #download_report
-    background: #e9e7e7 url('../img/icon-dowload.png') no-repeat 0 center
+    background: #e9e7e7 url('../img/icon-dowload.png') no-repeat 0 0
     padding-left: 65px
     &:hover
-        background: #e9e7e7 url('../img/icon-dowload-blue.png') no-repeat 0 center
+        background: #e9e7e7 url('../img/icon-dowload-blue.png') no-repeat 0 0
 
 #download_policy span:first-child,
 #download_report span:first-child
