--- a/src/sass/partials/pillar-tabs.sass
+++ b/src/sass/partials/pillar-tabs.sass
@@ -70,13 +70,13 @@
     img
         position: relative
         width: 100%
-        //float: right
+        float: right
         max-width: 400px
         height: auto
         margin: 0 auto
-        //margin-left: 4%
-        //margin-bottom: 4%
-        //margin-top: 4%
+        margin-left: 4%
+        margin-bottom: 4%
+        margin-top: 4%
 
     h2
         margin-top: 0
